--- a/treenode_edit.htm
+++ b/treenode_edit.htm
@@ -40,6 +40,7 @@
                 <div class="container">
                     <div class="title">
                         <h2>架構管理</h2>
+                        <button class="btn" onclick="window.location.href='data_list_noTree.htm';">放棄</button>
                     </div>
                     <!-- flex-12 -->
                     <div class="flex-3-9">
@@ -588,7 +589,7 @@
                                                 <!-- <div class="help">說明文字</div> -->
                                             </div>
 
-                                            <div class="setting_block">
+                                            <div class="setting_block" style="width: 100%;">
                                                     <div class="quick_btn">
                                                         <button class="btn" data-fancybox data-type="iframe" data-src="fancybox_userlist.htm" href="javascript:;"><i class="i_add"></i>選入使用者</button>
                                                     </div>
@@ -655,7 +656,7 @@
                                                 <!-- <div class="help">說明文字</div> -->
                                             </div>
 
-                                            <div class="setting_block">
+                                            <div class="setting_block" style="width: 100%;">
                                                     <div class="quick_btn">
                                                         <button class="btn" data-fancybox data-type="iframe" data-src="fancybox_reviewerlist.htm" href="javascript:;"><i class="i_add"></i>選入使用者</button>
                                                     </div>
