--- a/treenode_edit.htm
+++ b/treenode_edit.htm
@@ -601,7 +601,7 @@
                                                                 <span>1</span>
                                                             </div>
                                                             <span>使用者帳號｜姓名｜單位單位單位單位 </span>
-                                                            <div class="btn_grp">
+                                                            <div class="btn_grp" style="flex-basis:100px; margin-left:15px;">
                                                                 <button class="btn btn-delete"><i class="i_trash"></i></button>
                                                             </div>
                                                         </div>
@@ -611,7 +611,7 @@
                                                                 <span>2</span>
                                                             </div>
                                                             <span>使用者帳號｜姓名｜單位 </span>
-                                                            <div class="btn_grp">
+                                                            <div class="btn_grp" style="flex-basis:100px; margin-left:15px;">
                                                                 <button class="btn btn-delete"><i class="i_trash"></i></button>
                                                             </div>
                                                         </div>
