--- a/review_list.htm
+++ b/review_list.htm
@@ -64,8 +64,8 @@
                                                     <div class="labelEffect">
                                                         <input name="" type="date" value="">
                                                         <!--input name="" type="calendar" value="" class="calendar">
-                                                        <button class="btn"><i class="i_calendar"></i></button-->
-                                                        <label>上線開始日期</label>
+                                                        <button class="btn"><i class="i_calendar"></i></button>
+                                                        <label>上線開始日期</label-->
                                                     </div>
                                                     <!-- <div class="help">說明文字</div> -->
                                                 </div>
@@ -73,8 +73,8 @@
                                                     <div class="labelEffect">
                                                         <input name="" type="date" value="">
                                                         <!--input name="" type="calendar" value="" class="calendar">
-                                                        <button class="btn"><i class="i_calendar"></i></button-->
-                                                        <label>上線結束日期</label>
+                                                        <button class="btn"><i class="i_calendar"></i></button>
+                                                        <label>上線結束日期</label-->
                                                     </div>
                                                 </div>
                                             </div>
