--- a/data_new_update.htm
+++ b/data_new_update.htm
@@ -97,7 +97,7 @@
                                                             </div>
                                                             <div class="help">空白區分多個標籤</div>
                                                         </div>
-                                                        <h3>同步發佈單元</h3>
+                                                        <!-- <h3>同步發佈單元</h3>
                                                         <h4>全球資訊入口網</h4>
                                                         <div class="multi-flex-form-5">
                                                             <div class="form_grp" style="clear: both;">
@@ -108,7 +108,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>行政公告</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>法案動態</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -119,7 +118,7 @@
                                                                         <label><input name="" type="checkbox" value=""><span>行政公告</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>法案動態</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
+                                                                    <div class="help">說明文字</div>
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -130,7 +129,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>行政公告</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>法案動態</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -141,7 +139,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>行政公告</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>法案動態</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -152,7 +149,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>選項二</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>選項三</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -163,7 +159,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>選項二</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>選項三</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -174,7 +169,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>選項二</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>選項三</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -188,7 +182,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>行政公告</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>法案動態</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -199,7 +192,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>行政公告</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>法案動態</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -210,7 +202,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>行政公告</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>法案動態</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -221,7 +212,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>行政公告</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>法案動態</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -232,7 +222,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>選項二</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>選項三</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -243,7 +232,6 @@
                                                                         <label><input name="" type="checkbox" value=""><span>選項二</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>選項三</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
                                                             </div>
                                                             <div class="form_grp">
@@ -254,10 +242,46 @@
                                                                         <label><input name="" type="checkbox" value=""><span>選項二</span></label>
                                                                         <label><input name="" type="checkbox" value=""><span>選項三</span></label>
                                                                     </div>
-                                                                    <!-- <div class="help">說明文字</div> -->
                                                                 </div>
+                                                            </div>
+                                                        </div> -->
+                                                        <h3>上稿資訊</h3>
+                                                        <div class="form_grp">
+                                                            <div class="labelEffect">
+                                                                <select name="" disabled="disabled">
+                                                                    <option value="" disabled="disabled"></option>
+                                                                    <option value="選項1" selected>台中市政府</option>
+                                                                    <option value="選項2">選項2</option>
+                                                                    <option value="選項3">選項3</option>
+                                                                    <option value="選項4">選項4</option>
+                                                                    <option value="選項5">選項5</option>
+                                                                </select>
                                                             </div>
                                                         </div>
+                                                        <div class="form_grp">
+                                                            <div class="labelEffect">
+                                                                <input name="" type="text" value="系統管理者" disabled>
+                                                            </div>
+                                                            <div class="labelEffect">
+                                                                <input name="" type="text" value="04-22289111 #22104" disabled>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form_grp">
+                                                            <div class="labelEffect">
+                                                                <input name="" type="text" value="systemvod@gmail.com" disabled>
+                                                            </div>
+                                                        </div>
+                                                        <h3>是否推薦</h3>
+                                                        <div class="form_grp">
+                                                            <div class="labelEffect">
+                                                                <select name="">
+                                                                    <option value="" selected disabled="disabled"></option>
+                                                                    <option value="Y">是</option>
+                                                                    <option value="N">否</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+
                                                     </div>
                                                 </div>
                                             </div>
@@ -509,6 +533,54 @@
                                                         </div>
                                                     </div>
                                                 </div>
+                                                <hr>
+                                                <div class="setting_block">
+                                                    <h3>單元備用欄位</h3>
+                                                    <div class="flex-form">
+                                                        <div class="form_grp">
+                                                            <div class="labelEffect">
+                                                                <input name="" type="text" value="">
+                                                                <label>備用TEXT欄位</label>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form_grp">
+                                                            <div class="labelEffect">
+                                                                <select name="">
+                                                                    <option value="" selected disabled="disabled"></option>
+                                                                    <option value="Y">是</option>
+                                                                    <option value="N">否</option>
+                                                                </select>
+                                                                <label>備用Select欄位</label>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form_grp">
+                                                            <div class="labelEffect">
+                                                                <textarea></textarea>
+                                                                <label>備用Textarea欄位</label>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form_grp">
+                                                            <div class="form_title">備用Radio欄位</div>
+                                                            <div class="form_content">
+                                                                <div class="radio_grp form_inline">
+                                                                    <label><input name="radioSample" type="radio" value=""><span>選項一</span></label>
+                                                                    <label><input name="radioSample" type="radio" value=""><span>選項二</span></label>
+                                                                    <label><input name="radioSample" type="radio" value=""><span>選項三</span></label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form_grp">
+                                                            <div class="form_title">行內排列</div>
+                                                            <div class="form_content">
+                                                                <div class="check_grp form_inline">
+                                                                    <label><input name="" type="checkbox" value=""><span>選項一</span></label>
+                                                                    <label><input name="" type="checkbox" value=""><span>選項二</span></label>
+                                                                    <label><input name="" type="checkbox" value=""><span>選項三</span></label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -672,6 +744,20 @@
                                         <button class="btn btn-green">暫存</button>
                                         <button class="btn">預覽</button>
                                         <button class="btn btn-orange">確定發布</button>
+                                    </div>
+                                </div>
+                                <div class="block">
+                                    <div class="_head">
+                                        <h3>最後編修資訊</h3>
+                                    </div>
+                                    <div class="log">
+                                        <ul>
+                                            <li>
+                                                <span><i class="i_man"></i></span>系統管理者(admin)
+                                            </li>
+                                            <li>
+                                                <span><i class="i_clock"></i></span>2019/11/26 14:26:10 </li>
+                                        </ul>
                                     </div>
                                 </div>
                                 <div class="block">
