--- a/data_new_update.htm
+++ b/data_new_update.htm
@@ -245,6 +245,42 @@
                                                                 </div>
                                                             </div>
                                                         </div> -->
+                                                        <h3>是否推薦</h3>
+                                                        <div class="form_grp">
+                                                            <div class="labelEffect">
+                                                                <select name="">
+                                                                    <option value="" selected disabled="disabled"></option>
+                                                                    <option value="Y">是</option>
+                                                                    <option value="N">否</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <hr>
+                                                        <h3>分類分眾</h3>
+                                                        <div class="form_grp">
+                                                            <div class="labelEffect">
+                                                                <select id="" name="" class="used">
+                                                                    <option value="" selected="" disabled="disabled">請選擇</option>
+                                                                    <option value="選項1">選項1</option>
+                                                                    <option value="選項2">選項2</option>
+                                                                    <option value="選項3">選項3</option>
+                                                                    <option value="選項4">選項4</option>
+                                                                    <option value="選項5">選項5</option>
+                                                                </select>
+                                                                <label>資料大類</label>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form_grp">
+                                                            <div class="form_title">分眾</div>
+                                                            <div class="form_content">
+                                                                <div class="checkbox_grp form_inline">
+                                                                    <label><input name="" type="checkbox" value=""><span>分眾1</span></label>
+                                                                    <label><input name="" type="checkbox" value=""><span>分眾2</span></label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <hr>
+                
                                                         <h3>上稿資訊</h3>
                                                         <div class="form_grp">
                                                             <div class="labelEffect">
@@ -269,16 +305,6 @@
                                                         <div class="form_grp">
                                                             <div class="labelEffect">
                                                                 <input name="" type="text" value="systemvod@gmail.com" disabled>
-                                                            </div>
-                                                        </div>
-                                                        <h3>是否推薦</h3>
-                                                        <div class="form_grp">
-                                                            <div class="labelEffect">
-                                                                <select name="">
-                                                                    <option value="" selected disabled="disabled"></option>
-                                                                    <option value="Y">是</option>
-                                                                    <option value="N">否</option>
-                                                                </select>
                                                             </div>
                                                         </div>
 
