--- a/basic_component.htm
+++ b/basic_component.htm
@@ -31,7 +31,7 @@
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
-                    <li><a href="light.htm">首頁</a></li>
+                    <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">節點</a></li>
                     <li>節點</li>
                 </ul>
