--- a/data_new_update.htm
+++ b/data_new_update.htm
@@ -31,7 +31,7 @@
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
-                    <li><a href="light.htm">首頁</a></li>
+                    <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">內容管理</a></li>
                     <li>快速上稿</li>
                 </ul>
