--- a/review_list.htm
+++ b/review_list.htm
@@ -29,7 +29,7 @@
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
-                    <li><a href="light.htm">首頁</a></li>
+                    <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">內容管理</a></li>
                     <li>資料審核</li>
                 </ul>
