--- a/website_list.htm
+++ b/website_list.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SuperCMS</title>
+    <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -31,15 +31,15 @@
             <div class="breadcrumb">
                 <ul>
                     <li><a href="index.htm">首頁</a></li>
-                    <li><a href="#">節點</a></li>
-                    <li>節點</li>
+                    <li><a href="#">網站管理</a></li>
+                    <li>網別管理</li>
                 </ul>
             </div>
             <!-- gird section -->
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>特殊範例頁面 - 網站總覽</h2>
+                        <h2>網別管理</h2>
                     </div>
                     <!-- flex-12 -->
                     <div class="flex-12">
@@ -49,16 +49,12 @@
                                     <!-- 資料分類 -->
                                     <div class="tag">
                                         <ul>
-                                            <li class="active"><a href="#">標籤1</a></li>
-                                            <li><a href="#">標籤2</a></li>
-                                            <li><a href="#">標籤3</a></li>
-                                            <li><a href="#">標籤4</a></li>
-                                            <li><a href="#">標籤5</a></li>
+                                            <li class="active"><a href="#">入口網</a></li>
+                                            <li><a href="#">主題網</a></li>
                                         </ul>
                                     </div>
                                     <!-- 資料處理 -->
-                                    <div class="control_panel">
-                                        <!-- 預設隱藏，有勾選check再顯示 -->
+                                    <!--div class="control_panel">
                                         <div class="dropdown">
                                             <button class="btn dropdown-btn">
                                                 <i class="i_setting"></i>批次處理</button>
@@ -74,12 +70,12 @@
                                                     </li>
                                                     <li>
                                                         <button class="btn btn-delete">
-                                                            <i class="i_trash"></i>刪除 </button>
+                                                            <i class="i_trash"></i>刪除</button>
                                                     </li>
                                                 </ul>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div-->
                                     <!-- 頁碼 -->
                                     <div class="pagination">
                                         <form action="" class="form_inline">
