--- a/index_list.html
+++ b/index_list.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>創育加速計畫線上申審補助系統</title>
+    <title>W CMS Lite</title>
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="demo_wrap">
-        <h1>W CMS管理端</h1>
+        <h1><a href="index_list.html">W CMS管理端</a></h1>
         <div class="btn_grp">
             <a href="https://github.com/LiuCC910/CMS_UI" class="btn">切版檔案更新請按此下載</a>
         </div>
@@ -94,10 +94,19 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>資料管理 > 資料上稿</td>
+                        <td>首頁</td>
                         <td>
                             <ul>
-                                <li>2-3. 管理端：複審資料繳交/補件日期起迄區間設定 <a href="admin_announceEdit.html" target="_blank"></a></li>
+                                <li> <a href="index.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>資料管理：資料上稿</td>
+                        <td>
+                            <ul>
+                                <li> <a href="admin_announceEdit.html" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
