--- a/aside.htm
+++ b/aside.htm
@@ -85,6 +85,36 @@
                 </ul>
             </li-->
             <div class="divider">功能清單</div>
+            <li><a href="#">
+                <img src="images/iot_icon/setting.svg" alt="">
+                <span>系統開發</span>
+            </a>
+            <ul>
+                <li><a href="user01_list.htm"><span>代碼維護</span></a></li>
+            </ul>
+        </li>
+
+            <li><a href="#">
+                    <img src="images/iot_icon/admingrp2.svg" alt="">
+                    <span>系統管理</span>
+                </a>
+                <ul>
+                    <li><a href="user01_list.htm"><span>使用者管理</span></a></li>
+                    <li><a href="user01_list.htm"><span>組織架構管理</span></a></li>
+                    <li><a href="user01_list.htm"><span>角色權限管理</span></a></li>
+                    <li><a href="user01_list.htm"><span>代碼管理</span></a></li>
+                </ul>
+            </li>
+            <li><a href="#">
+                    <img src="images/iot_icon/template.svg" alt="">
+                    <span>網站管理</span>
+                </a>
+                <ul>
+                    <li><a href="card_website.htm"><span>架構管理</span></a></li>
+                    <li><a href="card_website.htm"><span>網別管理</span></a></li>
+                    <li><a href="card_website.htm"><span>版型管理</span></a></li>
+                </ul>
+            </li>
             <li>
                 <a href="#">
                     <img src="images/iot_icon/document.svg" alt="">
@@ -162,27 +192,6 @@
                     <span>Loader</span>
                 </a>
             </li-->
-            <li><a href="#">
-                    <img src="images/iot_icon/template.svg" alt="">
-                    <span>網站管理</span>
-                </a>
-                <ul>
-                    <li><a href="card_website.htm"><span>架構管理</span></a></li>
-                    <li><a href="card_website.htm"><span>網別管理</span></a></li>
-                    <li><a href="card_website.htm"><span>版型管理</span></a></li>
-                </ul>
-            </li>
-            <li><a href="#">
-                    <img src="images/iot_icon/setting.svg" alt="">
-                    <span>系統管理</span>
-                </a>
-                <ul>
-                    <li><a href="user01_list.htm"><span>使用者管理</span></a></li>
-                    <li><a href="user01_list.htm"><span>組織架構管理</span></a></li>
-                    <li><a href="user01_list.htm"><span>角色權限管理</span></a></li>
-                    <li><a href="user01_list.htm"><span>代碼管理</span></a></li>
-                </ul>
-            </li>
             <li><a href="#">
                     <img src="images/iot_icon/todo.svg" alt="">
                     <span>備用選單</span>
