--- a/index_list.html
+++ b/index_list.html
@@ -95,18 +95,14 @@
                     <tr>
                         <td></td>
                         <td>首頁</td>
-                        <td>
-                            <ul>
-                                <li> <a href="index.htm" target="_blank"></a></li>
-                            </ul>
-                        </td>
+                        <td><a href="index.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>資料管理：資料上稿</td>
                         <td>
                             <ul>
-                                <li> <a href="admin_announceEdit.html" target="_blank"></a></li>
+                                <li> <a href="" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -115,7 +111,7 @@
                         <td></td>
                         <td>
                             <ul>
-                                <li> <a href="member_pAddstep2_alliance.html" target="_blank"></a></li>
+                                <li> <a href="" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
