--- a/aside.htm
+++ b/aside.htm
@@ -90,7 +90,7 @@
                 <span>系統開發</span>
             </a>
             <ul>
-                <li><a href="user01_list.htm"><span>代碼維護</span></a></li>
+                <li><a href="codeList.htm"><span>代碼維護</span></a></li>
             </ul>
         </li>
 
@@ -99,10 +99,11 @@
                     <span>系統管理</span>
                 </a>
                 <ul>
-                    <li><a href="user01_list.htm"><span>使用者管理</span></a></li>
-                    <li><a href="user01_list.htm"><span>組織架構管理</span></a></li>
-                    <li><a href="user01_list.htm"><span>角色權限管理</span></a></li>
-                    <li><a href="user01_list.htm"><span>代碼管理</span></a></li>
+                    <li><a href="ugrpList.htm"><span>權限群組</span></a></li>
+                    <li><a href="userList.htm"><span>使用者管理</span></a></li>
+                    <li><a href="deptEdit.htm"><span>組織架構</span></a></li>
+                    <li><a href="#"><span>登入紀錄查詢</span></a></li>
+                    <li><a href="#"><span>個人資料檢視</span></a></li>
                 </ul>
             </li>
             <li><a href="#">
@@ -110,7 +111,7 @@
                     <span>網站管理</span>
                 </a>
                 <ul>
-                    <li><a href="card_website.htm"><span>架構管理</span></a></li>
+                    <li><a href="catTreeList.htm"><span>目錄樹管理管理</span></a></li>
                     <li><a href="card_website.htm"><span>網別管理</span></a></li>
                     <li><a href="card_website.htm"><span>版型管理</span></a></li>
                 </ul>
@@ -124,6 +125,7 @@
                     <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
                     <li><a href="data_list.htm"><span>單元上稿</span></a></li>
                     <li><a href="media_photo.htm"><span>MMO資源庫</span></a></li>
+                    <li><a href="data_list.htm"><span>資料審稿</span></a></li>
                 </ul>
             </li>
             <!--li>
