--- a/index.htm
+++ b/index.htm
@@ -29,14 +29,15 @@
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
-                    <li>首頁</li>
+                    <li><a href="index.htm"></a>首頁</a></li>
+                    <li>系統儀錶板</li>
                 </ul>
             </div>
             <!-- gird section -->
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>首頁</h2>
+                        <h2>系統儀錶板</h2>
                     </div>
                     <div class="flex-3-3-3-3">
                         <div class="col">
