--- a/index_list.html
+++ b/index_list.html
@@ -29,10 +29,11 @@
 
         .demo_wrap {
             max-width: 1000px;
-            margin: 0em auto 1em;
+            margin: 3em auto 1em;
             padding: 15px 15px 3em;
             clear: both;
-            background: #FFF
+            background: #FFF;
+            border-radius: 0.5em;
         }
         .demo_wrap h1 {
             display: block;
